--- a/settings.html
+++ b/settings.html
@@ -99,23 +99,23 @@
 						</div>
 						<div style="clear:both; margin-bottom: 10px;"></div>
 						<div>
-							<div class="category" data-id="7">&nbsp;</div>
-							<p>Kontakte knüpfen</p>
-						</div>
-						<div style="clear:both; margin-bottom: 10px;"></div>
-						<div>
 							<div class="category" data-id="8">&nbsp;</div>
 							<p>Vergnügen</p>
 						</div>
 						<div style="clear:both; margin-bottom: 10px;"></div>
 						<div>
 							<div class="category" data-id="9">&nbsp;</div>
-							<p>Destination</p>
+							<p>Flirtlocations</p>
+						</div>
+						<div style="clear:both; margin-bottom: 10px;"></div>
+						<div>
+							<div class="category" data-id="10">&nbsp;</div>
+							<p>Gefahrwarner ADALIGHTS</p>
 						</div>
 						<div style="clear:both; margin-bottom: 10px;"></div>
 						<div>
 							<p>&nbsp;</p>
-							<div style="float: right;">1.4.1</div>
+							<div style="float: right;">1.4.2</div>
 							<p>Sie nutzen die Version</p>
 						</div>
 						<div style="clear:both; margin-bottom: 10px;"></div>
